anonomus_login_implementation

--- a/web/index.html
+++ b/web/index.html
@@ -100,10 +100,10 @@
       loadMainDartJs();
     }
   </script>
-  <script type="module">
+  
     
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.9/firebase-app.js";
-   
+    <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script> -->
+    <!-- <script>
     const firebaseConfig = {
       apiKey: "AIzaSyBw2H-ODzV2Pm8C8KpYInaI4ilZJ79R2QY",
       authDomain: "fir-functions-1a419.firebaseapp.com",
@@ -115,6 +115,6 @@
   
   
     const app = initializeApp(firebaseConfig);
-  </script>
+  </script> -->
 </body>
 </html>
